@@ -18,7 +18,7 @@
  *
  * The author may be contacted at gray.watson@antaire.com
  *
- * $Id: error.h,v 1.14 1993/11/23 07:41:43 gray Exp $
+ * $Id: error.h,v 1.15 1994/03/30 06:06:45 gray Exp $
  */
 
 #ifndef __ERROR_H__
@@ -30,7 +30,10 @@
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
 
 /* global debug flags that are set my MALLOC_DEBUG environ variable */
-IMPORT	int		_malloc_flags;
+IMPORT	long		_malloc_flags;
+
+/* global iteration counter for activities */
+IMPORT	unsigned long	_malloc_iterc;
 
 /*
  * message writer with printf like arguments
@@ -43,7 +46,7 @@ IMPORT	void	_malloc_message(const char * format, ...);
 IMPORT	void	_malloc_die(void);
 
 /*
- * malloc version of perror of an error in STR
+ * malloc version of error of an error in STR
  */
 IMPORT	void	_malloc_error(const char * func);
 
