@@ -1,3 +1,7 @@
+Wed Mar 30 01:03:56 1994  Gray Watson  (gray@fridge.antaire.com)
+
+	* Added iteration count lable to all logfile output.
+
 Fri Mar 25 01:18:55 1994  Gray Watson  (gray at toaster.antaire.com)
 
 	* Fixed small recursive problem messing up malloc #2 info.
@@ -675,5 +679,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray at toaster)
 	when MALLOC_ADDRESS was not working correctly.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.99 1994/03/25 06:20:03 gray Exp $
+$Id: ChangeLog,v 1.100 1994/03/30 06:06:35 gray Exp $
 -------------------------------------------------------------------------------
